package structures.enums;

public enum EstadoAscensor {
    SUBIENDO, BAJANDO, PARADO
}
