@startuml modeloDelDominio

class "models.Persona" {
    - Planta plantaActual
    - Planta plantaDestino
    - Tiempo tiempoEnDestino
    - boolean esperandoAscensor
    - boolean dentroAscensor
    + Persona()
    - Tiempo elegirTiempoEnDestino()
    - Planta elegirPlantaDestino()
    + void mover()
    + Planta getPlantaActual()
    + Planta getPlantaDestino()
    + boolean estadoEsperandoAscensor()
    + boolean estaDentroAscensor()
    + void setPlantaActual(Planta plantaActual)
    + void setPlantaDestino(Planta plantaDestino)
    + void esperar Ascensor()
    + void entrarAscensor()
    + void salirAscensor()

}

enum "structures.enums.EstadoAscensor" {
    SUBIENDO
    BAJANDO
    PARADO
}

class "models.Tiempo" {
    - int horas
    - int minutos
    - int segundos 
    - Universidad universidad
    + Tiempo()
    + Tiempo(int horas, int minutos, int segundos)
    + void incremenrtar()
    + void disminuir()
    + int getHoras()
    + int getMinutos()
    + int getSegundos()
    + Universidad getUniversidad()
    - void empezar()
    + {static} void main(String[] args)
}


class "models.Planta" {
    - int nivel
    - ArrayList<Persona> personasEnPlanta
    - SalaEspera salaEspera
    + Planta(int nivel)
    + void agregarPersona(Persona persona)
    + void eliminarPersona(Persona persona)
    + void subirAAscensor(Ascensor ascensor)
    + void mover()
    + void llamadaAscensorMasCercano(ArrayList<Ascensor> ascensores)
    + int getNivel()
    + ArrayList<Persona> getPersonasEnPlanta()
    + SalaEspera getSalaEspera()
    + void setNivel(int nivel)
    + int compareTo(Planta o)

}


class "models.Ascensor" {
    - int idAscensor
    - int nivel
    - ArrayList<Planta> plantas
    - ArrayList<Persona> personas
    - EstadoAscensor estado
    + Ascensor(int idAscensor, ArrayList<Planta> plantas) 
    + void agregarPersona(Persona persona)
    - void bajarPersonas()
    + Planta getPlantaActual()
    + int getPersonasEnAscensor()
    + boolean estaVacio()
    + boolean estaLleno()
    + boolean estaSubiendo()
    + boolean estaBajando()
    + boolean estaParado()
    + void agregarPersona()
    - void bajarPersonas()
    + void mover()
    + void llamar(Planta planta)
    + void subir()
    + void bajar()
}


class "models.Universidad" {
    - ArrayList<Planta> plantas
    - Map<int, Ascensor> ascensores
    + Universidad()
    + ArrayList<Planta> getPlantas()
    + Map<Integer,Ascensor> getAscensores()
    - void crearPlantas()
    # void configurarAscensores()
    + boolean llegoUnaPersona()
    # void mover()
}

class "models.SalaEspera" {
    - ArrayList <Persona> personas
    + SalaEspera()
    + void agregarPersona(Persona persona)
    + void eliminarPersona(Persona persona)
    + ArrayList<Persona> getPersonas()
    + int count()
}

class "controllers.Consola" {
    + {static} void imprimir()
    + {static} void imprimir(Planta planta)
    + {static} void imprimir(SalaEspera salaEspera)
    + {static} void imprimir(Ascensor ascensor, int nivel)
    + {static} void imprimir(int numero)
    + {static} void imprimir(Tiempo tiempo)
    + {static} void imprimir(String texto)
}

class "controllers.Movimiento" {
    + {static} void mover(Universidad universidad)
    + {static} void mover(Persona persona)
    + {static} void mover(Planta planta)
    + {static} void mover(Ascensor ascensor)
}

class "views.Renderizado" {
    + {static} void renderizar(Tiempo tiempo) 
}

Ascensor *--d Persona 
Ascensor *--d Planta 
Ascensor ---r "structures.enums.EstadoAscensor" 
Universidad *-- Ascensor 
Universidad *-- Planta
Planta *--d Persona 
Persona *---u Tiempo 
Tiempo *--d Universidad
SalaEspera *--r Planta
SalaEspera o--d Persona
Consola <|--- Renderizado

Movimiento ---r|> models

Renderizado <|--- Tiempo

@enduml